Fixes
fiksede et problem med at min h1 gik ned og croppede noget af min case-list af. Løst ved at give min container .hero container en min-height og margin. Derudover har jeg erstattet grid ved min kontaktformular da jeg i forvejen bruger flex på resten af siden.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -148,13 +148,14 @@ main {
 }
 
 .hero {
-    height: 22vh;
+    min-height: 22vh;
     padding-top: 5px;
     display: flex;
     flex-direction: column;
     justify-content: start;
     align-items: center;
     text-align: center;
+    margin-bottom: 50px;
 }
 
 .hero--landingpage {
@@ -183,6 +184,7 @@ h1 {
     line-height: 1;
     transition: 0.3s ease-out;
     z-index: 1; 
+    position: relative;
 }
 
 .h1--landingpage {
@@ -266,7 +268,8 @@ p {
 .h2--cases {
     position: relative;
     opacity: 0;
-    padding-top: 130px;
+    margin-top: 100px;
+    padding-top: 0;
     padding-left: 0;
     transform: translateY(50px);
     transition: all 1s ease-out;
@@ -369,12 +372,14 @@ p {
     z-index: 1;
 }
 
-.kontakt-grid {
-    display: grid;
-    grid-template-columns: 50% 50%; 
-    gap: 60px;
+.kontakt-flex {
+    display: flex;
+    margin-top: 100px;
     width: 100%;
-    margin-top: 50px;
+
+}
+.kontakt-flex div, form{
+    flex: 1;
 }
 
 form {
@@ -541,7 +546,7 @@ footer {
     }
     
     h2 {
-    font-size: 2.5rem;
+    font-size: clamp(25px, 4.9vw, 40px);
     margin-top: 0;
     }
     
@@ -577,6 +582,7 @@ footer {
 
     .hero {
     min-height: 0;
+    margin-bottom: 25px;
     }
 
     .staff-badge img {
@@ -640,11 +646,10 @@ footer {
     margin-top: 50px;
     }
     
-    .kontakt-grid {
-    display: grid;
-    grid-template-columns: 1fr; 
+    .kontakt-flex {
+    flex-direction: column;
+    margin-top: 60px;
     gap: 20px;
-    width: 100%;
     }
     
     .footer-logo {
